# cppBpe

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: ci.yml
include/cppBpe/: python_bindings.h  tokenizer.h
scripts/: setup_linux.sh  setup_macos.sh
src/: python_bindings.cpp  tokenizer.cpp
tests/cpp/: test_tokenizer.cpp
tests/python/: benchmark.py  test_tokenizer.py
